--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
 }
 
 html { 
-    background: url(https://ak2.picdn.net/shutterstock/videos/25864022/thumb/12.jpg) no-repeat center center fixed; 
+    background: url(https://cdn.pixabay.com/photo/2015/03/11/15/24/nebula-668783_960_720.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -14,6 +14,9 @@ body {
     font-family: 'Bree Serif', serif;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 h1 {
@@ -29,6 +32,7 @@ main, form {
     align-items: center;
     width: 100%;
     color: white;
+    max-width: 1080px;
 }
 
 main {
@@ -89,6 +93,7 @@ h2 {
     opacity: .9;
     transition: all 0.3s ease-in-out;
     border-radius: 10px;
+    cursor: pointer;
 }
 
 .label-div {
@@ -99,6 +104,7 @@ h2 {
 
 label {
     padding-right: 10px;
+    cursor: pointer;
 }
 
 .radio-button {
@@ -108,6 +114,10 @@ label {
 
 input:focus{
     border: 2px solid black;
+}
+
+input {
+    cursor: pointer;
 }
 
 .selectedChoice {
@@ -121,4 +131,10 @@ input:focus{
 
 .correct {
     box-shadow: 0px 0px 100px inset rgb(23, 233, 68);
+}
+
+@media screen and (min-width: 768px) {
+    .answer {
+        height: 75px;
+    }
 }
