add background img

--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
 }
 
 html { 
-    background: url(https://cdn.pixabay.com/photo/2015/03/11/15/24/nebula-668783_960_720.jpg) no-repeat center center fixed; 
+    background: url(http://www.4usky.com/data/out/88/164793759-stars-wallpapers.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
