--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
 }
 
 html { 
-    background: url(http://www.4usky.com/data/out/88/164793759-stars-wallpapers.jpg) no-repeat center center fixed; 
+    background: url(https://i.imgur.com/D0ctyb3.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -60,7 +60,7 @@ h2 {
 }
 
 .start:hover, .submit:hover, .next:hover {
-    border: 4px solid rgb(13, 59, 31);
+    border: 4px solid rgb(69, 33, 199);
 }
 
 .start {
@@ -71,8 +71,8 @@ h2 {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    border-top : 3px solid black;
-    border-bottom : 3px solid black;
+    border-top : 3px solid rgb(69, 33, 199);
+    border-bottom : 3px solid rgb(69, 33, 199);
 }
 
 .stats {
@@ -122,7 +122,7 @@ input {
 
 .selectedChoice {
     box-shadow: 10px 10px 5px white;
-    border: 5px solid black;
+    border: 5px solid rgb(69, 33, 199);
 }
 
 .wrong {
